<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">飞飞出行</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">飞飞出行</string>
    <string name="user_png">用户名</string>
    <string name="login">登录</string>
    <string name="user_hint">请输入用户ID</string>
    <string name="img_user_dscp">用户名图标</string>
    <string name="img_psd_dscp">输入密码图标</string>
    <string name="psd_hint">请输入密码</string>
    <string name="img_head_pscp">head_portrait</string>
    <string name="login_check">自动登陆</string>
    <string name="title_activity_welcome">飞飞出行</string>
    <string name="img_wel_dscp">欢迎</string>
    <string name="title_activity_main">主页</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_success">登陆成功</string>
    <string name="img_suc_dscp">Login Success</string>
    <string name="title_activity_self_infor">个人信息</string>
    <string name="img_right_dscp">详情</string>
    <string name="self_infor_search">查询</string>
    <string name="sign">注册</string>
    <string name="title_activity_sign_up">注册</string>
    <string name="success">成功</string>
    <string name="title_activity_sign_up_success">SignUpSuccessActivity</string>
    <string name="title_activity_ato_z">城市选择</string>
    <string name="azhint">请输入关键字</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_database">数据库操作</string>
    <string name="create_database">创建数据库</string>
    <string name="add_data">添加数据</string>
    <string name="update_data">更新数据</string>
    <string name="delete_data">删除数据</string>
    <string name="replace_data">替换数据</string>
    <string name="query_data">查询数据</string>
    <string name="title_activity_bus">BusActivity</string>
    <string name="title_activity_change_bus">ChangeBusActivity</string>
    <string name="title_activity_station">公交站点查询</string>
    <string name="title_activity_around">周边站点查询</string>
    <string name="search_text">查询</string>
    <string name="city_text">城市</string>
    <string name="bus_head">公交线路查询</string>
    <string name="busline">公交线路</string>
    <string name="bus_hint">如63路，快线1号</string>
    <string name="change_head">公交路线查询</string>
    <string name="station_head">公交站点查询</string>
    <string name="station_text">公交站点查询</string>
    <string name="station_hint">如西直门</string>
    <string name="around_head">周边站点查询</string>
    <string name="around_text">范围（半径）</string>
    <string name="dingwei_text">定位</string>
    <string name="place_text">位置</string>
    <string name="logout_text">退出</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="personal_infor">个人信息</string>
    <string name="modify_text">修改密码</string>
    <string name="search_hint">请输入公交站</string>
    <string name="no_result">没有搜索到相关数据</string>
    <string name="sydney">悉尼</string>
    <string name="beijing">北京</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="move_the_camera">移动camera</string>
    <string name="traffic">Traffic</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="compass">指南针</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="scroll">滑动手势</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="animate">Animate</string>
    <string name="stop_animation">\u25A0</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="left_arrow">\u2190</string>
    <string name="up_arrow">\u2191</string>
    <string name="down_arrow">\u2193</string>
    <string name="right_arrow">\u2192</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="report_time">发布时间</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>
    <string name="notLogin">未登录</string>

</resources>