<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DatabaseActivity" >

    <Button
        android:id="@+id/createDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_database" />

    <Button
        android:id="@+id/addData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createDB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/updataData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/update_data" />

    <Button
        android:id="@+id/deleteData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/delete_data" />

    <Button
        android:id="@+id/queryData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deleteData"
        android:layout_below="@+id/deleteData"
        android:layout_marginTop="20dp"
        android:text="@string/query_data" />

    <Button
        android:id="@+id/replaceData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queryData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/replace_data" />

</RelativeLayout>