<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BusActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bus"
        android:layout_below="@+id/bus"
        android:layout_marginTop="22dp"
        android:text="@string/search_text" />

    <TextView
        android:id="@+id/city_e1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="134dp"
        android:text="@string/city_text" />

    <TextView
        android:id="@+id/busHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/bus_number"
        android:text="@string/bus_head" />

    <Spinner
        android:id="@+id/city_bus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/busHead"
        android:layout_below="@+id/busHead"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="58dp" />

    <TextView
        android:id="@+id/bus_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/bus"
        android:text="@string/busline" />

    <EditText
        android:id="@+id/bus"
        android:hint="@string/bus_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bus_number"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>