<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordlinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:background="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/checkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/login"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_check" />
    
    
    
<LinearLayout 
    	android:id="@+id/passwordlinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/usernamelinear"
        android:orientation="horizontal">
  
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:ems="10"
        android:layout_weight="1"
        android:hint="@string/psd_hint"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>
</LinearLayout>

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkLogin"
        android:layout_alignBottom="@+id/checkLogin"
        android:layout_alignRight="@+id/login"
        android:layout_marginRight="17dp"
        android:clickable="true"
        android:text="@string/sign"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/usernamelinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordlinear"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/user_hint"
            android:inputType="text"
            android:singleLine="true" />

    </LinearLayout>

</RelativeLayout>