<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangeBusActivity" >

    <TextView
        android:id="@+id/changeHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="27dp"
        android:text="@string/change_head" />

    <TextView
        android:id="@+id/city_e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/changeHead"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="34dp"
        android:text="@string/city_text" />

    <Spinner
        android:id="@+id/city_change"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeHead"
        android:layout_below="@+id/changeHead"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/change_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/city_change"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        android:text="@string/search_text" />

</RelativeLayout>