<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <Button
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/passwordlinear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:text="@string/sign"
        android:textColor="@color/white" />
<LinearLayout 
    	android:id="@+id/userlinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dip"
        android:layout_marginBottom="20dip"
        android:layout_alignLeft="@+id/passwordlinear1"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">



    <EditText
        android:id="@+id/sid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="text"
        android:singleLine="true" />
</LinearLayout>
<LinearLayout 
    	android:id="@+id/passwordlinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userlinear1"
        android:layout_marginBottom="25dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">


   
    <EditText
        android:id="@+id/spassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/psd_hint"
        android:inputType="textPassword"
        android:singleLine="true" />
</LinearLayout>
</RelativeLayout>