<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" 
    android:background="@drawable/backgroundd">
    <TextView
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="北京市"
        android:textColor="@color/black"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weather_live"
        android:textSize="14sp"
        android:textColor="#000"/>
    <TextView 
        android:id="@+id/reporttime1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="14sp"
        android:text="@string/report_time"
        android:textColor="#000"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
    <TextView 
        android:id="@+id/weather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_weight="1"
        android:textSize="30sp"
        android:textColor="#000"/>
    <TextView 
        android:id="@+id/temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#000"/>
    </LinearLayout>  

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="55dp">    
    <TextView 
        android:id="@+id/wind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:textColor="#000"/>
    <TextView 
        android:id="@+id/humidity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:textColor="#000"/>
     </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weather_forecast"
        android:textSize="14sp"
        android:textColor="#000"/>
    <TextView 
        android:id="@+id/reporttime2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="14sp"
        android:text="@string/report_time"
        android:textColor="#000"/>
    </LinearLayout> 
    
    <TextView 
        android:id="@+id/forecast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:textSize="14sp"
        android:textColor="#000"/>

                            
</LinearLayout>
